@@ -1,10 +1,11 @@
 """Common dependency."""
 
-from typing import Union, Optional
+from typing import Union, Optional, Dict, Any
 from enum import Enum
 
 import re
 from fastapi import Query
+
 import numpy
 
 from titiler.custom import cmap as custom_colormap, tms as custom_tms
@@ -58,3 +59,39 @@ class CommonImageParams:
         self.rescale = rescale
         self.color_formula = color_formula
         self.color_map = cmap.get(color_map.value) if color_map else None
+
+
+class CommonMetadataParams:
+    """Common Metadada parameters."""
+
+    def __init__(
+        self,
+        bidx: Optional[str] = Query(
+            None, title="Band indexes", description="Coma (',') delimited band indexes",
+        ),
+        nodata: Optional[Union[str, int, float]] = Query(
+            None, title="Nodata value", description="Overwrite internal Nodata value"
+        ),
+        pmin: float = Query(2.0, description="Minimum percentile"),
+        pmax: float = Query(98.0, description="Maximum percentile"),
+        max_size: int = Query(1024, description="Maximum image size to read onto."),
+        histogram_bins: Optional[int] = Query(None, description="Histogram bins."),
+        histogram_range: Optional[str] = Query(
+            None, description="Coma (',') delimited Min,Max histogram bounds"
+        ),
+    ):
+        """Populate Imager Params."""
+        self.indexes = tuple(int(s) for s in re.findall(r"\d+", bidx)) if bidx else None
+        if nodata is not None:
+            nodata = numpy.nan if nodata == "nan" else float(nodata)
+        self.nodata = nodata
+        self.pmin = pmin
+        self.pmax = pmax
+        self.max_size = max_size
+        self.hist_options: Dict[str, Any] = dict()
+        if histogram_bins:
+            self.hist_options.update(dict(bins=histogram_bins))
+        if histogram_range:
+            self.hist_options.update(
+                dict(range=list(map(float, histogram_range.split(","))))
+            )
