@@ -1,3 +1,9 @@
+NEXT (TBD)
+------------------
+- support STAC items (#16)
+- better API documentation via response models
+- re-order OpenAPI route tags
+
 1.0.0 (2020-06-04)
 ------------------
 - Initial release
